--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: Scheduled Health Check
 # Controls when the action will run.
 on:
   schedule:
-    - cron: "10 * * * *"
+    - cron: "30 * * * *"
+  workflow_dispatch:
 
 jobs:
   health_check_job:
