--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,2 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+SITE=https://anime-hub.ir
+Download_server(dl1)=http://dl1.anime-hub.ir
